ansi2/src/snapshots/ansi2__test__link_id.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Link(
            "id=1;http://example.com/id",
            "twice",
        ),
    ],
)
