ansi2/src/snapshots/ansi2__test__link_ll-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    0,
                    1,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    1,
                    2,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "r",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    2,
                    3,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "g",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    3,
                    4,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "e",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    4,
                    5,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "t",
                dim: false,
                italic: false,
                underline: true,
                hide: false,
                strike: false,
                bg_color_r: (
                    0,
                    0,
                ),
                color_r: (
                    0,
                    0,
                ),
                bold_r: (
                    0,
                    0,
                ),
                blink_r: (
                    0,
                    0,
                ),
                text_r: (
                    5,
                    6,
                ),
                dim_r: (
                    0,
                    0,
                ),
                italic_r: (
                    0,
                    0,
                ),
                underline_r: (
                    0,
                    0,
                ),
                hide_r: (
                    0,
                    0,
                ),
                strike_r: (
                    0,
                    0,
                ),
            },
        ],
    ],
    w: 7,
    h: 1,
}
