ansi2/src/snapshots/ansi2__test__link_ll.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Link(
            "file://win/c/code/ansi2/target",
            "target",
        ),
    ],
)
