ansi2/src/snapshots/ansi2__test__link_no_close-3.snap
---
source: ansi2/src/lib.rs
expression: canvas.minify()
---
[
    [
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "foo]8;;http://example.com/foo\\foo",
            dim: false,
            italic: false,
            underline: true,
            hide: false,
            strike: false,
        },
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: " ",
            dim: false,
            italic: false,
            underline: false,
            hide: false,
            strike: false,
        },
        Node {
            bg_color: Default,
            color: Default,
            bold: false,
            blink: false,
            text: "foo]8;;http://example.com/bar\\bar",
            dim: false,
            italic: false,
            underline: true,
            hide: false,
            strike: false,
        },
    ],
]
