ansi2/src/snapshots/ansi2__test__link_no_close.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Token {
            sgr: Link(
                "http://example.com/foo",
                "foo\u{1b}]8;;http://example.com/foo\u{1b}\\foo",
            ),
            range: (
                0,
                71,
            ),
        },
        Token {
            sgr: Char(
                ' ',
            ),
            range: (
                71,
                72,
            ),
        },
        Token {
            sgr: Link(
                "http://example.com/foo",
                "foo\u{1b}]8;;http://example.com/bar\u{1b}\\bar",
            ),
            range: (
                72,
                143,
            ),
        },
    ],
)
