ansi2/src/snapshots/ansi2__test__link_soft_reset-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Color8(
                    Red,
                ),
                bold: false,
                blink: false,
                char: 'f',
                dim: false,
                italic: true,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Red,
                ),
                bold: false,
                blink: false,
                char: 'o',
                dim: false,
                italic: true,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Color8(
                    Red,
                ),
                bold: false,
                blink: false,
                char: 'o',
                dim: false,
                italic: true,
                underline: true,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'b',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'a',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                char: 'r',
                dim: false,
                italic: false,
                underline: false,
                hide: false,
            },
        ],
    ],
    w: 7,
    h: 1,
}
