ansi2/src/snapshots/ansi2__test__plain-2.snap
---
source: ansi2/src/lib.rs
expression: canvas
---
Canvas {
    pixels: [
        [
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "a",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "n",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "s",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
            Node {
                bg_color: Default,
                color: Default,
                bold: false,
                blink: false,
                text: "i",
                dim: false,
                italic: false,
                underline: false,
                hide: false,
                strike: false,
            },
        ],
    ],
    w: 5,
    h: 1,
}
