ansi2/src/snapshots/ansi2__test__plain.snap
---
source: ansi2/src/lib.rs
expression: r
---
(
    "",
    [
        Char(
            'a',
        ),
        Char(
            'n',
        ),
        Char(
            's',
        ),
        Char(
            'i',
        ),
    ],
)
